# ray-tracing-with-rust

./: Cargo.toml  LICENSE.md  README.md  notes.md
ray_tracing_core/: Cargo.toml
ray_tracing_core/src/: core.rs  environment.rs  geometry.rs  hit_able.rs  lib.rs  material.rs  math.rs  probability_density_function.rs  random.rs  test.rs  texture.rs  types.rs
ray_tracing_core/src/core/: camera.rs  configuration.rs  hit_record.rs  object.rs  scatter_record.rs  scene.rs
ray_tracing_core/src/environment/: sky.rs
ray_tracing_core/src/geometry/: collection.rs  shape.rs
ray_tracing_core/src/geometry/collection/: bvh_node.rs  geometry_list.rs  leaf_node.rs
ray_tracing_core/src/geometry/instancing/: flip_normals.rs  rotate_x.rs  rotate_y.rs  rotate_z.rs  translate.rs
ray_tracing_core/src/geometry/shape/: cuboid.rs  movable_sphere.rs  sphere.rs  xy_rect.rs  xz_rect.rs  yz_rect.rs
ray_tracing_core/src/geometry/volume/: constant_medium.rs
ray_tracing_core/src/hit_able/: collection.rs
ray_tracing_core/src/hit_able/collection/: bvh_node.rs  hit_able_list.rs  leaf_node.rs
ray_tracing_core/src/hit_able/instancing/: flip_normals.rs  rotate_x.rs  rotate_y.rs  rotate_z.rs  translate.rs
ray_tracing_core/src/hit_able/shape/: cuboid.rs  movable_sphere.rs  sphere.rs  xy_rect.rs  xz_rect.rs  yz_rect.rs
ray_tracing_core/src/hit_able/volume/: constant_medium.rs
ray_tracing_core/src/material/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  material_blend.rs  metal.rs  no_material.rs
ray_tracing_core/src/math/: aabb.rs  ortho_normal_base.rs  perlin.rs  ray.rs
ray_tracing_core/src/probability_density_function/: cosine_pdf.rs  geometry_pdf.rs  hit_able_pdf.rs  mixture_pdf.rs
ray_tracing_core/src/test/: test_help.rs  test_scene_simple.rs
ray_tracing_core/src/texture/: bitmap_texture.rs  blend_texture.rs  checker_texture.rs  color_filter.rs  constant_texture.rs  noise_texture.rs
ray_tracing_examples/: Cargo.toml
ray_tracing_examples/src/ray_tracing_1/: main.rs
ray_tracing_examples/src/ray_tracing_2/: main.rs
ray_tracing_examples/src/ray_tracing_load/: main.rs
ray_tracing_examples/src/ray_tracing_opencv_test/: main.rs
ray_tracing_examples/src/ray_tracing_test/: main.rs
ray_tracing_examples/src/ray_tracing_test_deserialize/: main.rs
ray_tracing_examples/src/ray_tracing_test_serialize/: main.rs
ray_tracing_examples/src/ray_tracing_view/: main.rs
ray_tracing_show_image/: Cargo.toml
ray_tracing_show_image/src/: lib.rs
ray_tracing_utility/: Cargo.toml  TestSceneSimple.json
ray_tracing_utility/src/: image.rs  iterator.rs  lib.rs  serialization.rs  thread.rs  view.rs
ray_tracing_utility/src/iterator/: iterator_exp2.rs
ray_tracing_utility/src/serialization/: core.rs  environment.rs  geometry.rs  hit_able.rs  json.rs  material.rs  texture.rs
ray_tracing_utility/src/serialization/core/: camera.rs  configuration.rs  scene.rs
ray_tracing_utility/src/serialization/environment/: sky.rs
ray_tracing_utility/src/serialization/geometry/: collection.rs  instancing.rs
ray_tracing_utility/src/serialization/geometry/instancing/: flip_normals.rs  rotate_x.rs  rotate_y.rs  rotate_z.rs  translate.rs
ray_tracing_utility/src/serialization/geometry/shape/: cuboid.rs  movable_sphere.rs  sphere.rs  xy_rect.rs  xz_rect.rs  yz_rect.rs
ray_tracing_utility/src/serialization/geometry/volume/: constant_medium.rs
ray_tracing_utility/src/serialization/hit_able/: collection.rs  shape.rs
ray_tracing_utility/src/serialization/material/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  material_blend.rs  metal.rs  no_material.rs
ray_tracing_utility/src/serialization/texture/: bitmap_file.rs  blend_texture.rs  checker_texture.rs  color_filter.rs  constant_texture.rs  noise_texture.rs
ray_tracing_utility/src/thread/: ray_trace_process.rs  ray_trace_thread.rs
ray_tracing_utility/src/view/: viewer.rs
(+44 files in other folders)
