[package]
name = "ray_tracing_core"
version = "0.1.1"
authors = ["Rabbid76 <Gernot.Steinegger@gmail.com>"]
edition = "2018"
description = "Ray Tracing based on Peter Shirley's mini books"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
glm = "0.2.3"
fastapprox = "0.3.0"
