[package]
name = "ray_tracing_utility"
version = "0.1.0"
authors = ["Rabbid76 <Gernot.Steinegger@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ray_tracing_core = { path = "../ray_tracing_core" }

# Crate serde_json
# https://docs.serde.rs/serde_json/index.html
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

image = "0.23.14"
